tests/dataset/tpc-ds/compiler/go/q70.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq704180203890/001/main.go:329:2: syntax error: unexpected name ny after top level declaration
